# boreal-LOA

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  UpdateLog.md  pyproject.toml  requirements.txt  runBOREAL.py  setup.cfg.template  tests.py
boreal/: BOREAL.py  BOREAL_PC.py
boreal/forward_module/spheroid/: spheroid.py
boreal/forward_module/spheroid/data/: AKernel.npy  AKernel_299.npy  Abs_Kernel.npy  Abs_Kernel_299.npy  BKernel.npy  BKernel_299.npy  BKernel_p22_299.npy  mI.npy  mR.npy  r_grid.npy
boreal/forward_module/tamuDUST/: ih.py
boreal/forward_module/tamuDUST/data/: OptProp2_Phi695.npy  OptProp_new.npy
boreal/run_example/reference_output/: SaharanDust_boreal_pc_output.txt  SaharanDustresults_boreal_output.txt  SimulatedCase_for_BOREALPC_boreal_pc_output.txt  SimulatedCase_for_BOREALresults_boreal_output.txt  TaklamakanDust_boreal_pc_output.txt  TaklamakanDustresults_boreal_output.txt
